# code-atlas

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
crates/atlas-core/: Cargo.toml
crates/atlas-core/examples/: index_dir.rs
crates/atlas-core/src/: error.rs  ignore.rs  lib.rs  model.rs  scanner.rs
crates/atlas-core/tests/: embedding.rs  index.rs
crates/atlas-core/tests/fixtures/: sample.js  sample.rs  sample.ts
crates/atlas-llm/: Cargo.toml
crates/atlas-parser/: Cargo.toml
crates/atlas-parser/src/: chunk.rs  lib.rs  parse.rs  parser.rs  tests.rs
crates/atlas-vdb/: Cargo.toml
crates/atlas-vdb/src/: embedding.rs  lib.rs  similarity.rs  store.rs
