[workspace]
members = [
    "crates/atlas-cli",
    "crates/atlas-core",
    "crates/atlas-parser",
    "crates/atlas-vdb",
    "crates/atlas-llm",
]
resolver = "3"

[workspace.dependencies]
tree-sitter = "0.26"
tree-sitter-language = "0.1"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
clap = { version = "4.6.1", features = ["derive"] }
rayon = "1.10"
